<resources>
    <!--LAYOUT REGISTRO-->
    <string name="app_name">findTeacher</string>
    <string name="titreg">Registro para acceder a la app</string>
    <string name="btnreg">Registrarse</string>
    <string name="btnfb">Accede con Facebook</string>
    <string name="camposobligatorios">*Campos obligatorios</string>
    <string name="hintusuario">Usuario*</string>
    <string name="hintcorreo">Correo electrónico*</string>
    <string name="hintcontra">Contraseña*</string>
    <string name="hintrepitecontra">Repite Contraseña*</string>
    <string name="contraseña">Contraseña</string>
    <string name="rellenatodos">Rellena todos los campos</string>
    <string name="logo">logo</string>
    <!--LAYOUT MENU1-->
    <string name="gestionarmicuenta">Gestionar mi cuenta</string>
    <string name="salir">Salir</string>


     <!--LAYOUT LOGIN-->
    <string name="titlogin">!Bienvenid@ a la formación a tu alcance¡</string>

    <string name="btnmostrarcontraseña">Mostrar contraseña</string>
    <string name="btniniciarsesion">Iniciar sesión</string>
    <string name="btnrecordarcontra">Recordar contraseña</string>
    <string name="hintusuariologin"> Usuario o Correo electrónico*</string>
    <!--LAYOUT PRINCIPAL-->
    <string name="btnservicios">Servicios de formadores</string>
    <string name="btndemandas">Ver demandas</string>
    <string name="btncreardemandas">Crear demanda</string>
    <string name="btnperfil">Gestionar perfil</string>

    <string name="titdemandantes"> Para los que necesitan formación:</string>
    <string name="titofertantes"> Para los que ofertan formación:</string>


    <!--LAYOUT DATOS BASICOS Gestión de datos personales-->
    <string name="datos_personales">Datos personales</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">E-mail</string>
    <string name="telefono">Teléfono</string>
    <string name="localidad">Localidad</string>
    <string name="guardar">Guardar</string>
    <string name="tit_registro_datos">Usuario analopez</string>
    <string name="err_campo_vacio">Este campo es obligatorio</string>
    <string name="datos_guardados">Datos guardados correctamente</string>
    <string name="permiso_almacenamiento">Se necesita permiso de almacenamiento para poder usar la fotografía tomada por la cámara</string>
    <string name="error_foto_no_cargada">Foto no cargada"</string>
    <string name="error_en_captura">Error en captura</string>
    <string name="error_fichero_no_encontrado">Fichero/recurso no encontrado</string>
    <string name="solicitud_permiso">Solicitud de permiso</string>
    <string name="galeria">Galería</string>
    <string name="fotografia">Fotografía</string>
    <string name="camara">Cámara</string>
    <string name="eliminar_foto">Eliminar foto</string>
    <!--LAYOUT ENVIO RESPUESTA PERSONAL-->
    <string name="tit_envio_respuesta">Envío de respuesta</string>
    <string name="nom_materia">Matemáticas</string>
    <string name="tit_materia">Materia</string>
    <string name="escriberespuesta">Mensaje</string>
    <string name="enviar">Enviar respuesta</string>
    <string name="respuesta_enviada">Respuesta enviada</string>
    <string name="nombre_destinatario">Ana López</string>
    <string name="tit_nombre_destinatario">Destinatario</string>
    <string name="usuario_profesor">Usuario DSalinas</string>
    <string name="tit_asunto">Demanda a la que responde</string>
    <string name="asunto">Profesor de Informática en Valencia y alrededores</string>
    <!--LAYOUT REALIZACION PAGO-->
    <string name="pago_servicio">Pago del servicio</string>
    <string name="realizacion_pago">Realización de pago</string>
    <string name="concepto">Concepto</string>
    <string name="lorem_ipsum">Clases de repaso de matemáticas para examen final de instituto.            </string>
    <string name="detalle_servicio">Detalle del servicio prestado:</string>
    <string name="precio_hora">Precio por hora</string>
    <string name="d_precio_hora">€30 / hora</string>
    <string name="tiempo">Horas prestadas</string>
    <string name="horas">3</string>
    <string name="total">Total a pagar</string>
    <string name="d_total">€90</string>
    <string name="pago_realizado">Pago realizado correctamente</string>

    <string name="nombre_info">Nombre</string>
    <string name="apellidos_info">Apellidos</string>
    <string name="correo_info">Correo</string>
    <string name="numero_de_celular_info">Numero de celular</string>
    <string name="solicitar_informacion_sobre_info">Agregar otra información</string>
    <string name="solicitar_info">Enviar información</string>
    <string name="direccion_info">Dirección</string>
    <string name="nombre_respuesta">Nombre</string>
    <string name="respuesta_respuesta">Respuesta</string>
    <string name="añade_respuesta">Añade un mensaje...</string>
    <string name="responder_respuesta">Responder</string>
    <string name="solicitar_servicio_detalle">Solicitar Servicio</string>
    <string name="descripcion_detalle">Descripción:</string>

    <string name="usuariox">Usuario analopez</string>
    <string name="tit_nombre_profesor">Nombre del profesor</string>
    <string name="nombre_profesor">Daniel Salinas</string>
    <string name="tramitar_pago">Tramitar pago</string>

    <!--string name="usuariox">Usuario X</string-->
    <!--LAYOUT CREAR DEMANDA-->
    <string name="mis_demandas">Mis Demandas</string>


    <string name="servicio_cancelado">Servicio cancelado correctamente</string>
    <string name="respuesta_dada">Respuesta enviada correctamente</string>
    <string name="demanda_creada">Demanda creada correctamente</string>
    <string name="servicio_aceptado">Servicio Aceptado correctamente</string>
    <!-- GESTIÓN DE PERFIL-->
    <string name="tit_gestion_perfil">GESTIÓN DE PERFIL</string>
    <string name="guardar_perfil">Perfil guardado correctamente</string>
    <string name="cancelar_perfil">Cambios cancelados</string>
    <string name="eliminar_perfil">Perfil eliminado correctamente</string>
    <string name="ingles">Inglés</string>
    <string name="informatica">Informática</string>
    <string name="conduccion">Conducción</string>
    <string name="jardineria">Jardinería</string>
    <string name="matematicas">Matemáticas</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo_perfil">NUEVO PERFIL</string>
    <string name="cancelar">Cancelar</string>

    <string name="descperfil">Perfil resumen:</string>
    <string name="txtperfil">CLASES DE INFORMATICA. Imparto clases de Informática de cualquier nivel.
    Desde ofimática hasta Programación. También para niños. </string>
    <string name="btnsiguiente">Siguiente</string>
    <string name="nomprofe"> DANIEL SALINAS GARCÍA</string>

    <string name="tit_gestion_perfil3">GESTIÓN DE PERFIL -Paso 1/2</string>
    <string name="tit_gestion_perfil4">GESTIÓN DE PERFIL -Paso 2/2</string>
    <string name="titperfilavanzado">¿Por qué tendrían que escogerte?</string>
    <string name="txtperfilavanzado">Dispongo de amplia experiencia, más de 15 años.
        Si contactas conmigo no quedarás defraudado.  </string>
    <string name="titrecomendaciones">Destaca las mejores recomendaciones de tus clientes: </string>
    <string name="recomendacion1">Excelente profesor. He aprendido mucho y lo recomiendo.
        Gracias. ANA LÓPEZ. 07/12/2017 </string>
    <string name="recomendacion2">Rara vez he aprendido tanto con un profesor.
            Su dedicación es muy buena ;). ANTONIO CASTELLS. 07/12/2017 </string>

    <!-- DEMAMNDAS-->
    <string name="txtdemandas">Para los profesores que deseen atenderlas: </string>
    <!-- PERFILES-->
    <string name="comentario_uno">Gracias por el trabajo realizado. Les recomiendo que utilizen la aplicación, es muy buena.</string>
    <string name="comentario_dos">Hasta ahora, es el mejor formador que he encontrado.</string>
    <string name="comentario_tres">Excelente aplicación. Los servicios prestados han mejorado considerablemente. Espero continúen de esa manera.</string>
</resources>
