<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_usuario"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/tit_registro_datos"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/icono_usuario"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/icono_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/usuariox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_usuario" />
            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/concepto"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_texto_concepto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:minHeight="60dp"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

            <TextView
                android:id="@+id/tv_detalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/detalle_servicio"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_texto_concepto" />

            <TextView
                android:id="@+id/tv_d_precio_hora"
                android:layout_width="wrap_content"
                android:layout_height="20dp"

                android:layout_marginTop="8dp"
                android:text="@string/d_precio_hora"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_d_horas"
                app:layout_constraintTop_toBottomOf="@+id/tv_texto_nombre_profesor" />

            <TextView
                android:id="@+id/tv_precio_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/precio_hora"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_horas"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_profesor" />

            <TextView
                android:id="@+id/tv_horas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tiempo"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_precio_hora" />

            <TextView
                android:id="@+id/tv_d_horas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/horas"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_d_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_d_precio_hora" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/total"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_horas" />

            <TextView
                android:id="@+id/tv_d_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/d_total"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toEndOf="@+id/tv_total"
                app:layout_constraintTop_toBottomOf="@+id/tv_d_horas" />

            <Button
                android:id="@+id/b_pagar"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/redondo"
                android:elevation="2dp"
                android:text="@string/tramitar_pago"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_nombre_profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tit_nombre_profesor"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_precio_hora"
                app:layout_constraintTop_toBottomOf="@+id/tv_detalle" />

            <TextView
                android:id="@+id/tv_texto_nombre_profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nombre_profesor"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/tv_d_precio_hora"
                app:layout_constraintTop_toBottomOf="@+id/tv_detalle" />


        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>