<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="97dp"
            android:layout_height="91dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/titlogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_usuario"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo">

            <EditText
                android:id="@+id/usuario"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintusuariologin"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_contraseña"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_usuario">

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hintcontra"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@string/contraseña"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/mostrar_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="mostrarContraseña"
            android:text="@string/btnmostrarcontraseña"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_contraseña" />

        <Button
            android:id="@+id/butt_acceder"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/redondo"
            android:elevation="2dp"
            android:onClick="acceder"
            android:text="@string/btniniciarsesion"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mostrar_contraseña" />

        <TextView
            android:id="@+id/olvidado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="48dp"
            android:clickable="true"
            android:text="@string/btnrecordarcontra"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/butt_acceder" />

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="."
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mostrar_contraseña" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/camposobligatorios"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_contraseña" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>